# pyrxd

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.claude/skills/security-panel/: SKILL.md
.github/ISSUE_TEMPLATE/: config.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  combine-prs.yml  publish.yml  scorecard.yml
ci/: poetry-pin.txt
docker/: regtest.Dockerfile
docs/: DMINT_RESEARCH.md  ROADMAP.md  WALLET_CLI.md  cli-security-backlog.md  conf.py  dmint-followup.md  index.rst  radiant-core-wallet-research.md  red-team-checklist.md  scope-decision-2026-04-30.md  security-audit-scope.md  security-review-playbook.md  showcase.md  threat-model.md
docs/_static/announce/: pyrxd-0.9.0-card.html
docs/api/: devnet.rst  index.rst  swap.rst
docs/brainstorms/: 2026-05-07-dmint-integration-brainstorm.md  2026-05-08-dmint-v1-deploy-m2-brainstorm.md  2026-05-19-gravity-ref-covenant-design.md  2026-06-08-pyrxd-cli-signer-seam-design.md
docs/brainstorms/gravity-ref-spike/: AnyWalletParse.rxd  DEADLINE_RACE_PANEL_2026-05-24.md  GravityFtCovenantAnyWallet.artifact.json  GravityFtCovenantAnyWallet.rxd  GravityFtPrologue.artifact.json  GravityFtPrologue.rxd  GravityFtReleaseSpike.artifact.json  GravityFtReleaseSpike.rxd  GravityNftCovenantAnyWallet20.artifact.json  GravityNftCovenantAnyWallet20.rxd  REGTEST_VALIDATION_PLAN_2026-05-30.md  SPV_PRIMITIVE_REDTEAM_2026-05-29.md  build_covenant.py  build_finalize_proof.py  build_finalize_proof_multi.py  build_forfeit.py  build_ft_finalize.py  build_fused_ft_spk.py  build_leg_a.py  build_leg_b.py  build_leg_b_negatives.py  build_prologue_ft.py  fund_covenant.py  fund_fused.py  fuse_anywallet.py  fuse_nft_covenant.py  rescue_nft.py  validate_anywallet_parse.py  validate_nft_covenant.py
docs/concepts/: dmint-v1-deploy.md  external-miner-protocol.md  glyph-structures-and-terminology.md  gravity.md  index.md  partial-tx-swaps.md  v1-mint-mechanics.md
docs/how-to/: broadcast-a-transaction.md  build-a-cross-chain-swap.md  handle-radiant-bip143-quirks.md  index.md  issue-a-dmint-token.md  migrate-0.4-to-0.5.md  run-a-two-host-swap-dry-run.md  scan-address-for-glyphs.md  spv-verification-pitfalls.md  use-the-public-testnet.md  verify-an-spv-proof.md
docs/inspect_static/inspect/: index.html  inspect.js
docs/plans/: 2026-05-07-feat-dmint-v1-mint-and-reference-miner-plan.md  2026-05-08-feat-dmint-v1-deploy-plan.md  2026-05-11-first-real-v1-dmint-deploy.md  2026-05-19-feat-gravity-ref-bearing-covenant-plan.md  2026-05-20-feat-gravity-ft-covenant-spend-path-plan.md  2026-06-03-feat-htlc-swap-watchtower-plan.md  2026-06-07-sprint-tier1-dev-onramp.md  2026-06-08-feat-cli-signing-agent-a-prime-plan.md  2026-06-11-tier1-onramp-finish-and-radiant-core-bump-plan.md  2026-06-12-tier2-xchain-swap-library-plan.md
docs/runbooks/: incident-response.md
docs/solutions/design-decisions/: expert-panel-pivot-before-coding.md
docs/solutions/integration-issues/: local-ci-parity-via-task-ci-and-pre-push-hook.md  rxindexer-mainnet-rest-only-glyph-ref-gate-http-adapter.md
docs/solutions/logic-errors/: dmint-deploy-reveal-hashlock-reuse.md  dmint-v1-classifier-gap.md  dmint-v1-mint-scriptsig-divergence.md  dmint-v1-mint-shape-mismatch.md
docs/tutorials/: cross-chain-swap.md  index.md  inspect-a-radiant-transaction.md  mint-a-glyph-ft.md  mint-a-glyph-nft.md  mint-from-a-dmint-contract.md  quickstart.md  your-first-radiant-transaction.md
examples/: README.md  dmint_claim_demo.py  dmint_v1_deploy_demo.py  gravity_full_trade.py  gravity_live_test.py  gravity_swap_demo.py  partial_swap_demo.py  regtest_quickstart.py
guides/: recover-stuck-rxd.md
scripts/: _dust_swap_shared.py  _glyph_mainnet.py  _glyph_ref_http.py  diagnose_orphans.sh  dmint_v2_mainnet_run.py  eth_swap_grief_run.py  eth_swap_run.py  fuzz_deep.sh  fuzz_overnight.sh  gen-spv-test-fixtures.py  post-public-flip.sh  watchtower_run.py
scripts/fuzz_atheris/: harness_classify_input.py  harness_decode_payload.py  harness_dmint_from_script.py  harness_extract_reveal_metadata.py  harness_inspect_script.py
scripts/gen-photonic-vectors/: README.md  gen-vectors.ts  package.json
src/pyrxd/: __init__.py  constants.py  devnet.py  keys.py
src/pyrxd/agent/: __init__.py  client.py  confirm.py  daemon.py  discover.py  errors.py  hygiene.py  protocol.py  signer.py  transport.py  watch_only.py
src/pyrxd/btc_wallet/: htlc_leg.py
src/pyrxd/cli/: __init__.py  agent_cmds.py  config.py  errors.py  glyph_cmds.py  glyph_helpers.py  main.py  prompts.py  query_cmds.py  regtest_cmds.py  setup_cmd.py  wallet_cmds.py
src/pyrxd/crypto/: aead.py  kem.py
src/pyrxd/eth_wallet/: htlc_leg.py  rpc.py
src/pyrxd/fee_models/: satoshis_per_kilobyte.py
src/pyrxd/glyph/: _inspect_core.py  (+9 more)
tests/: conftest.py  test_agent_daemon.py  test_agent_discover.py  test_agent_signer.py  test_agent_watch_only.py  test_btc_htlc_leg.py  test_covenant.py  test_coverage_gaps.py  test_coverage_gaps2.py  test_coverage_gaps5.py  test_credential_binding.py  test_crypto_aead.py  test_crypto_kem.py  test_devnet.py  test_dmint_daa_offchain_onchain_differential.py  test_dmint_end_to_end.py  test_dmint_module.py  test_dmint_v1_deploy.py  test_dmint_v1_mint.py  test_dmint_v1_regtest_e2e.py  test_dmint_v2_canonical.py  test_dmint_v2_daa_canonical.py  test_dmint_v2_regtest_e2e.py  test_encrypted_content_types.py  test_eth_chains.py  test_eth_leg.py  test_fuzz_parsers.py  test_glyph_dmint.py  test_glyph_security_red_team.py  test_glyph_timelock.py  test_glyph_timelock_e2e.py  test_glyph_timelock_reveal_tx.py  test_glyph_wave.py  test_gravity_red_team.py  test_gravity_trade.py  test_hd_wallet.py  test_htlc_regtest_e2e.py  test_inspect_core_classification.py  test_mempool_adapters.py  test_network_bitcoin.py  (+24 more)
tests/cli/: test_agent_cmds.py  test_config.py  test_fuzz.py  test_glyph_cmds.py  test_query_cmds.py  test_regtest_cmds.py  test_setup_cmd.py  test_wallet_cmds.py  test_wallet_send.py
tests/fixtures/: photonic_timelock_vectors.json  spv_synthetic_headers.json
(+35 files in other folders)
